<resources>
    <string name="app_name">健康监护</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="login_out">退出登录</string>
    <string name="wel_tip">启动闪屏页</string>
    <string name="wel_skip">跳过</string>
    <string name="user_info">个人信息</string>
    <string name="setting">系统设置</string>
    <string name="menu_other">待定</string>
    <string name="menu_device_state">设备连接</string>
    <string name="menu_upload_state">上报状态</string>
    <string name="menu_beat">设备状态：未连接</string>
    <string name="menu_beat_ok">设备状态：已连接</string>


    <string name="self_id">用户ID</string>
    <string name="self_mobile">手机号</string>
    <string name="self_nick">用户姓名</string>
    <string name="self_sex">性别</string>
    <string name="self_age">年龄</string>
    <string name="self_height">身高</string>
    <string name="self_weight">体重</string>
    <string name="main_average">平均心率</string>
    <string name="now_average">当前心率</string>
    <string name="main_normal">正常范围</string>
    <string name="min_heart">最低心率</string>
    <string name="max_heart">最高心率</string>
    <string name="txt_bpm">BPM</string>
    <string name="main_test_rule">心率测试范围</string>
    <string name="heart_pic">脉搏图</string>

    <string name="scanner_subtitle_not_bonded">设备连接</string>
    <string name="scanner_subtitle_bonded">其他设备</string>
</resources>