<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_e5e5e5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_100"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp_15">

            <RelativeLayout
                android:id="@+id/menu_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/conner_white_bg_shape">

                <ImageView
                    android:id="@+id/one"
                    style="@style/home_image_style"
                    android:src="@drawable/ic_default" />

                <TextView
                    style="@style/home_txt_style"
                    android:layout_toEndOf="@id/one"
                    android:text="@string/user_info" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:background="@drawable/conner_white_bg_shape">

                <ImageView
                    android:id="@+id/two"
                    style="@style/home_image_style"
                    android:src="@drawable/img_2" />

                <TextView
                    android:id="@+id/device_state"
                    style="@style/home_txt_style"
                    android:layout_toEndOf="@id/two"
                    android:text="@string/menu_device_state" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:background="@drawable/conner_white_bg_shape">

                <ImageView
                    android:id="@+id/three"
                    style="@style/home_image_style"
                    android:src="@drawable/img_3" />

                <TextView
                    android:id="@+id/update_state"
                    style="@style/home_txt_style"
                    android:layout_toEndOf="@id/three"
                    android:text="@string/menu_beat" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/menu_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:background="@drawable/conner_white_bg_shape">

                <ImageView
                    android:id="@+id/five"
                    style="@style/home_image_style"
                    android:src="@drawable/img_5" />

                <TextView
                    style="@style/home_txt_style"
                    android:layout_marginStart="23dp"
                    android:layout_toEndOf="@id/five"
                    android:text="@string/setting" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_120"
            android:src="@drawable/ic_default" />
    </RelativeLayout>
</layout>